# qat_with_lut

./: .gitignore  CMakeLists.txt  README.md  bit_slice_kernels.cpp  bit_slice_kernels.h  convert.py  convert_qat.py  convert_qat_unet.py  main.cpp  model_preproc.cpp  model_preproc.h  save_all_images.py  small_mlp_full_qat.pth  train_full_mlp.py  train_my_mlp.py  train_qat_mlp.py  train_qat_mpl.py  verify_gguf.py
DDPM/: conver_qat_cifar.py  convert_qat_unet.py  generate_lut.py  golden_test.py  sample_images.py  train_cifar.py  train_classifier.py  train_qat_cifar.py
DDPM/ddpm/: QAT_UNet.py  qat_classifier.py  script_utils.py  script_utils_qat.py  unet.py
include/: QAT_unet.h  kernels.h  profiler.h  qat_unet_model.h  types.h  utils.h
scripts/: convert_full.py  convert_qat.py  save_all_images.py  save_single_image.py
src/: CMakeLists.txt  QAT_unet.cpp  generate_image.cpp  kernels.cpp  main.cpp  profiler.cpp  qat_unet_model.cpp  speed_test.cpp  test_attention.cpp  types.cpp  utils.cpp
